@@ -1,6 +1,9 @@
 Version 1.11.16+dev:
  * Language and i18n:
    * Updated translations:
+ * Miscellaneous and bug fixes:
+   * Fix bug #22307: random map generation produces oss in multiplayer
+     campaigns.
 
 Version 1.11.16:
  * Add-ons client:
